[package]
name = "iced_ruffle"
version = "0.1.0"
edition = "2021"
description = "An iced widget that plays Flash (.swf) movies via Ruffle"
license = "MIT OR Apache-2.0"

[lib]
name = "iced_ruffle"
path = "src/lib.rs"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "advanced"] }
image = { version = "0.25", default-features = false }

# Pinned by rev (not branch) so a single Ruffle source identity is reproducible:
# it lets a downstream `[patch.crates-io] swf = { git=ruffle, rev=… }` unify the
# duplicate `swf` (crates.io via Ruffle's build-time rascal + Ruffle's own git
# swf) into one rev-pinned source — required for offline nix vendoring. A branch
# patch can't resolve against an offline vendor; a rev patch needs a rev source.
ruffle_core = { git = "https://github.com/ruffle-rs/ruffle", rev = "5d1d2134e0254ab9bbc3de231fe0015c37eff9cb", features = [
    "default_font",
    "audio",
    "mp3",
] }
ruffle_render_wgpu = { git = "https://github.com/ruffle-rs/ruffle", rev = "5d1d2134e0254ab9bbc3de231fe0015c37eff9cb" }
# Software video decoder (H.263/VP6/ScreenVideo) — needed for embedded-video SWFs.
ruffle_video_software = { git = "https://github.com/ruffle-rs/ruffle", rev = "5d1d2134e0254ab9bbc3de231fe0015c37eff9cb" }

tracing = "0.1"
# Real audio output (matches Ruffle's pinned cpal).
cpal = "0.16"
bytemuck = "1"
thiserror = "2"
# Matches the `url` version Ruffle uses; needed only to name `Url` in the
# `UiBackend` trait we implement for cursor support.
url = "2"

[dev-dependencies]
# The example app needs an async executor (for the file dialog) and a file picker.
iced = { version = "0.14", features = ["tokio"] }
rfd = "0.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "player"
path = "examples/player.rs"
